Fix broken link

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ Jul'24: <a href="https://mustardfox.org/"   target="_blank">
     Ethan Lavi</a>, <a href="https://www.ntousakis.com/"   target="_blank">
     Grigoris Ntousakis</a>, and <a href="https://www.linkedin.com/in/luyc/"   target="_blank">
     Yuchen Lu</a> join the group for their PhDs!<br>
-Jun'24: <a href="https://yoghurtina.github.io/"   target="_blank">
+Jun'24: <a href="https://igemou.github.io/"   target="_blank">
     Ioanna Gemou</a> starts her research visit on machine learning for systems, co-hosted by <a href="https://ritambharasingh.com/"   target="_blank">
     Ritambhara Singh</a>.</p>
 <p>See <a href="https://atlas.cs.brown.edu/news/"  >
@@ -575,7 +575,7 @@ Jun'24: <a href="https://yoghurtina.github.io/"   target="_blank">
 </h2>
 
 
-<div id="gallery-1-1756777506350980000">
+<div id="gallery-1-1757474267989186000">
   
 <!-- <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/anirudh.jpg" alt="Anirudh Narsipur" />
@@ -607,7 +607,7 @@ Jun'24: <a href="https://yoghurtina.github.io/"   target="_blank">
 </div>
 <!-- <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/ioanna.jpg" alt="Ioanna Gemou" />
-    <strong><a href="https://yoghurtina.github.io/" title="Ioanna Gemou">Ioanna Gemou</a></strong> <br> Visiting Student 
+    <strong><a href="https://igemou.github.io/" title="Ioanna Gemou">Ioanna Gemou</a></strong> <br> Visiting Student 
 </div> -->
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/julian.jpg" alt="Julian Dai" />
@@ -679,7 +679,7 @@ Jun'24: <a href="https://yoghurtina.github.io/"   target="_blank">
 
 <script>
   $(window).on("load", function () {
-    $('#gallery-1-1756777506350980000').packery({
+    $('#gallery-1-1757474267989186000').packery({
       percentPosition: true,
       gutter: 5,
       resize: true
