--- a/public/team/index.html
+++ b/public/team/index.html
@@ -804,10 +804,10 @@ Bridging the gap between machine learning and computer systems.</p>
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
        <!-- begin columns block -->
 <!-- 
-<img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/ioanna.jpg" alt="Ioanna Gemou" /> <p>__[Ioanna Gemou](https://yoghurtina.github.io/)__\
+<img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/ioanna.jpg" alt="Ioanna Gemou" /> <p>__[Ioanna Gemou](https://igemou.github.io/)__\
 At DTU; Operating at the intersection of ML and systems. Co-advised by [R. Singh](https://ritambharasingh.com).
 
-[E-mail](mailto:ioannagemou@gmail.com) | [Github](http://github.com/yoghurtina)</p> -->
+[E-mail](mailto:ioannagemou@gmail.com) | [Github](http://github.com/igemou)</p> -->
 <!-- 
 <img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/vagos.jpg" alt="Vagos Lamprou" /> <p>__[Vagos Lamprou](https://vagos.github.io/)__\
 At DTU; Intersted in distributed systems,  LLMs, and beyond.
@@ -841,7 +841,7 @@ Exploring the intersection of operating systems with secure computation and low-
     Zhicheng Huang</a> (M.Sc., 2025, next: University of California San Diego)<br>
 <a href="anarsipur.com"  >
     Anirudh Narsipur</a> (M.Sc., 2025, next: Evolver)<br>
-<a href="https://yoghurtina.github.io/"   target="_blank">
+<a href="https://igemou.github.io/"   target="_blank">
     Ioanna Gemou</a> (Visiting Student, 2025, next: Brown University)<br>
 <a href="https://forthoney.github.io/"   target="_blank">
     Seong-Heon Jung</a> (B.Sc., 2025, next: New York University)<br>
