--- a/publications/index.html
+++ b/publications/index.html
@@ -86,7 +86,7 @@
     
     
     "mainEntityOfPage": "true",
-    "wordCount": "1490"
+    "wordCount": "1520"
   }]
   </script>
 
@@ -759,12 +759,24 @@ PDF <em>(coming soon)</em></p>
 <p><strong>Automated Annotation Inference for MCP-based Agents</strong> <br>
 Grigoris Ntousakis, Julian James Stephen, Michael V. Le, Sai Sree Laya Chukkapalli, Teryl Taylor, Frederico Araujo. <em>1st Workshop on Systems for Agentic AI (SAA ’25)</em> <br>
 PDF <em>(coming soon)</em></p>
-<p><strong>Guarding LLM-aided Software Transformation Tasks via Component Exoskeletons</strong> <br>
+<p><a href="https://nikos.vasilak.is/p/exo:pacmi:2025.pdf"   target="_blank">
+    Guarding LLM-aided Software Transformation Tasks via Component Exoskeletons</a> <br>
 Evangelos Lamprou, Christian Gram Kalhauge, Martin Rinard, Nikos Vasilakis. <em>Practical Adoption Challenges of ML for Systems (PACMI &lsquo;25)</em> <br>
-PDF <em>(coming soon)</em></p>
-<p><strong>Towards Hybrid Cooperative-Preemptive Scheduling</strong> <br>
+<a href="https://dl.acm.org/doi/10.1145/3766882.3767171"   target="_blank">
+    ACM</a> | <a href="https://nikos.vasilak.is/p/exo:pacmi:2025.pdf"   target="_blank">
+    PDF</a></p>
+<p><a href="https://nikos.vasilak.is/p/cocoon:plos:2025.pdf"   target="_blank">
+    Towards Hybrid Cooperative-Preemptive Scheduling</a> <br>
 Yizheng Xie, Di Jin and Nikos Vasilakis. <em>13th Workshop on Programming Languages and Operating Systems</em> <br>
-PDF <em>(coming soon)</em></p>
+<a href="https://dl.acm.org/doi/10.1145/3764860.3768329"   target="_blank">
+    ACM</a> | <a href="https://nikos.vasilak.is/p/cocoon:plos:2025.pdf"   target="_blank">
+    PDF</a></p>
+<p><a href="https://nikos.vasilak.is/p/klean:plos:2025.pdf"   target="_blank">
+    KLean: Extending Operating System Kernels with Lean</a> <br>
+Di Jin, Ethan Lavi, Jinghao Jia, Robert Y. Lewis, Nikos Vasilakis. <em>13th Workshop on Programming Languages and Operating Systems (PLOS'25)</em> <br>
+<a href="https://dl.acm.org/doi/10.1145/3764860.3768336"   target="_blank">
+    ACM</a> | <a href="https://nikos.vasilak.is/p/klean:plos:2025.pdf"   target="_blank">
+    PDF</a></p>
 <p><a href="https://nikos.vasilak.is/p/sash:hotos:2025.pdf"   target="_blank">
     From Ahead-of- to Just-in-Time and Back Again: Static Analysis for Unix Shell Programs</a> <br>
 Lukas Lazarek, Seong-Heon Jung, Evangelos Lamprou, Zekai Li, Anirudh Narsipur, Eric Zhao, Michael Greenberg, Konstantinos Kallas, Konstantinos Mamouras, Nikos Vasilakis. <em>20th ACM Workshop on Hot Topics in Operating Systems (HotOS XX)</em> <br>
