--- a/public/index.html
+++ b/public/index.html
@@ -516,7 +516,12 @@
             style="text-decoration-line: none !important;" href="#news" aria-label="Anchor">#</a></span>        
     
 </h2>
-<p>Aug'25: Two <a href="https://www.usenix.org/conference/nsdi26"   target="_blank">
+<p>Sep'25: Early ideas on <a href="https://nikos.vasilak.is/p/exo:pacmi:2025.pdf"   target="_blank">
+    LLM guardrails</a>, <a href="https://nikos.vasilak.is/p/cocoon:plos:2025.pdf"   target="_blank">
+    hybrid scheduling</a>, and <a href="https://nikos.vasilak.is/p/klean:plos:2025.pdf"   target="_blank">
+    verifiable kernel extensions</a> at <a href="https://sigops.org/s/conferences/sosp/2025/workshops.html"   target="_blank">
+    SOSP'25 workshops</a>! <br>
+Aug'25: Two <a href="https://www.usenix.org/conference/nsdi26"   target="_blank">
     NSDI'26</a> papers on optimization prediction and fault tolerance for opaque distributed systems!<br>
 Aug'25: <a href="https://vagos.lamprou.xyz"   target="_blank">
     Evangelos Lamprou</a> joins BrownCS and the group for his PhD!  <br>
@@ -575,7 +580,7 @@ Jun'24: <a href="https://igemou.github.io/"   target="_blank">
 </h2>
 
 
-<div id="gallery-1-1760082280240903000">
+<div id="gallery-1-1760220089297156000">
   
 <!-- <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/anirudh.jpg" alt="Anirudh Narsipur" />
@@ -585,6 +590,11 @@ Jun'24: <a href="https://igemou.github.io/"   target="_blank">
     <img class="imgStuff" src="../profile_pictures/christina.jpg" alt="Christina Stepin" />
     <strong><a href="https://www.linkedin.com/in/christinastepin/" title="Christina Stepin">Christina Stepin</a></strong> <br> B.Sc. student
 </div> -->
+<div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/atharv.jpg" alt="Atharv Chowdhary" /> 
+  <strong><a href="#" title="Atharv Chowdhary">Atharv Chowdhary</a></strong> <br> B.Sc. Student
+</div>
+
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/di.jpg" alt="Di Jin" />
     <strong><a href="https://sleepymug.me" title="Di Jin">Di Jin</a></strong> <br> Postdoc
@@ -601,6 +611,12 @@ Jun'24: <a href="https://igemou.github.io/"   target="_blank">
     <img class="imgStuff" src="../profile_pictures/vagos.jpg" alt="Evangelos Lamprou" />
     <strong><a href="https://vagos.github.io/" title="Vagos Lamprou">Evangelos Lamprou</a></strong> <br> Ph.D. Student 
 </div>
+
+<div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/george.jpg" alt="George Kapetanakis" /> 
+  <strong><a href="#" title="George Kapetanakis">George Kapetanakis</a></strong> <br> Visiting Student
+</div>
+
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/grigoris_nt.jpg" alt="Grigoris Ntousakis" />
     <strong><a href="https://www.ntousakis.com/" title="Grigoris Ntousakis">Grigoris Ntousakis</a></strong> <br> Ph.D. Student 
@@ -608,15 +624,21 @@ Jun'24: <a href="https://igemou.github.io/"   target="_blank">
 <!-- <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/ioanna.jpg" alt="Ioanna Gemou" />
     <strong><a href="https://igemou.github.io/" title="Ioanna Gemou">Ioanna Gemou</a></strong> <br> Visiting Student 
-</div> -->
+</div> 
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/julian.jpg" alt="Julian Dai" />
     <strong><a href="https://jdai1.github.io/" title="Julian Dai">Julian Dai</a></strong> <br> B.Sc. student
-</div>
+</div> -->
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/lukas.jpg" alt="Lukas Lazarek" />
     <strong><a href="https://llazarek.github.io" title="Lukas Lazarek">Lukas Lazarek</a></strong> <br> Postdoc
 </div>
+
+<div class="gallery-item grid-w20">
+  <img class="imgStuff" src="../profile_pictures/maria.jpg" alt="Maria Lazou" /> 
+  <strong><a href="#" title="Maria Lazou">Maria Lazou</a></strong> <br> Visiting Student
+</div>
+
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/megan.jpg" alt="Megan Zheng" />
     <strong><a href="https://yuuu23.github.io/" title="Megan Zheng">Megan Zheng</a></strong> <br> B.Sc. student
@@ -640,7 +662,7 @@ Jun'24: <a href="https://igemou.github.io/"   target="_blank">
 </div> -->
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/yuchen.jpg" alt="Yuchen Lu" />
-    <strong><a href="https://www.linkedin.com/in/luyc/" title="Yuchen Lu">Yuchen Lu</a></strong> <br> Ph.D. Student 
+    <strong><a href="https://lwwlwwl.github.io/" title="Yuchen Lu">Yuchen Lu</a></strong> <br> Ph.D. Student 
 </div>
 <!-- <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/yutong.jpg" alt="Yutong Li" />
@@ -659,27 +681,12 @@ Jun'24: <a href="https://igemou.github.io/"   target="_blank">
     <strong><a href="https://huangworld.github.io/" title="Zhicheng Huang">Zhicheng Huang</a></strong> <br> M.Sc. Student
 </div> -->
 
-<div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/atharv.jpg" alt="Atharv Chowdhary" /> 
-  <strong><a href="#" title="Atharv Chowdhary">Atharv Chowdhary</a></strong> <br> B.Sc. Student
-</div>
-
-<div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/george.jpg" alt="George Kapetanakis" /> 
-  <strong><a href="#" title="George Kapetanakis">George Kapetanakis</a></strong> <br> Visiting Student
-</div>
-
-<div class="gallery-item grid-w20">
-  <img class="imgStuff" src="../profile_pictures/maria.jpg" alt="Maria Lazou" /> 
-  <strong><a href="#" title="Maria Lazou">Maria Lazou</a></strong> <br> Visiting Student
-</div>
-
 
 </div>
 
 <script>
   $(window).on("load", function () {
-    $('#gallery-1-1760082280240903000').packery({
+    $('#gallery-1-1760220089297156000').packery({
       percentPosition: true,
       gutter: 5,
       resize: true
