--- a/team/index.html
+++ b/team/index.html
@@ -724,7 +724,8 @@ Reimagining third-party library and package ecosystems. Co-advised by <a href="h
     E-mail</a> | <a href="http://github.com/GNtousakis"   target="_blank">
     Github</a> | <a href="https://twitter.com/gntousakis"   target="_blank">
     Twitter</a></p></p>
-<p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/yuchen.jpg" alt="Yuchen Lu" /> <p> <strong>Yuchen Lu</strong><br>
+<p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/yuchen.jpg" alt="Yuchen Lu" /> <p> <strong><a href="https://lwwlwwl.github.io/"   target="_blank">
+    Yuchen Lu</a></strong><br>
 Leveraging ML to build high-performance systems.   </p>
 <p><a href="mailto:yuchen_lu@brown.edu"  >
     E-mail</a> | <a href="http://github.com/lwwlwwl"   target="_blank">
