--- a/index.html
+++ b/index.html
@@ -522,7 +522,9 @@
     verifiable kernel extensions</a> at <a href="https://sigops.org/s/conferences/sosp/2025/workshops.html"   target="_blank">
     SOSP'25 workshops</a>! <br>
 Aug'25: Two <a href="https://www.usenix.org/conference/nsdi26"   target="_blank">
-    NSDI'26</a> papers on optimization prediction and fault tolerance for opaque distributed systems!<br>
+    NSDI'26</a> papers on <a href="https://github.com/atlas-brown/slowpoke"   target="_blank">
+    optimization prediction</a> and <a href="https://github.com/binpash/fractal"   target="_blank">
+    fault tolerance</a> for opaque distributed systems!<br>
 Aug'25: <a href="https://vagos.lamprou.xyz"   target="_blank">
     Evangelos Lamprou</a> joins BrownCS and the group for his PhD!  <br>
 Jul'25: Our <a href="https://nikos.vasilak.is/p/koala:atc:2025.pdf"   target="_blank">
@@ -580,7 +582,7 @@ Jun'24: <a href="https://igemou.github.io/"   target="_blank">
 </h2>
 
 
-<div id="gallery-1-1760220089297156000">
+<div id="gallery-1-1760569125014909000">
   
 <!-- <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/anirudh.jpg" alt="Anirudh Narsipur" />
@@ -618,7 +620,7 @@ Jun'24: <a href="https://igemou.github.io/"   target="_blank">
 </div>
 
 <div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../profile_pictures/grigoris_nt.jpg" alt="Grigoris Ntousakis" />
+    <img class="imgStuff" src="../profile_pictures/grigoris.jpg" alt="Grigoris Ntousakis" />
     <strong><a href="https://www.ntousakis.com/" title="Grigoris Ntousakis">Grigoris Ntousakis</a></strong> <br> Ph.D. Student 
 </div>
 <!-- <div class="gallery-item grid-w20">
@@ -686,7 +688,7 @@ Jun'24: <a href="https://igemou.github.io/"   target="_blank">
 
 <script>
   $(window).on("load", function () {
-    $('#gallery-1-1760220089297156000').packery({
+    $('#gallery-1-1760569125014909000').packery({
       percentPosition: true,
       gutter: 5,
       resize: true
