--- a/public/team/index.html
+++ b/public/team/index.html
@@ -26,8 +26,8 @@
   
   
   
-  <link type="text/css" rel="stylesheet" href="/css/main.bundle.min.84b039d48387540b69fa7738d902a4ebf382e0d2b182f37a2a981ca5d29faa40e31d8677d01e4bcd3909772463a3abf55cb95e5c3972b52b38d4cd7a9e693908.css"
-    integrity="sha512-hLA51IOHVAtp&#43;nc42QKk6/OC4NKxgvN6KpgcpdKfqkDjHYZ30B5LzTkJdyRjo6v1XLleXDlytSs41M16nmk5CA==" />
+  <link type="text/css" rel="stylesheet" href="/css/main.bundle.min.8525fa9ff293df63b92c96932b0a310ded91e635d0f22c7844d2738139776aa6d65f0a7c38a285df27219ae8afcd7524cd0ca98927629da0aee09910e3c2469b.css"
+    integrity="sha512-hSX6n/KT32O5LJaTKwoxDe2R5jXQ8ix4RNJzgTl3aqbWXwp8OKKF3ychmuivzXUkzQypiSdinaCu4JkQ48JGmw==" />
   
   
   <script type="text/javascript" src="/js/appearance.min.516a16745bea5a9bd011138d254cc0fd3973cd55ce6e15f3dec763e7c7c2c7448f8fe7b54cca811cb821b0c7e12cd161caace1dd794ac3d34d40937cbcc9ee12.js"
@@ -607,7 +607,7 @@
 <div class="gdoc-columns gdoc-columns--regular flex flex-gap flex-mobile-column">
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
        <!-- begin columns block -->
-<p><img class="imgStuffTeam" align="left" src="../profile_pictures/nikosv.jpg" alt="Nikos Vasilakis"> <strong><a href="https://nikos.vasilak.is/"   target="_blank">
+<p><img class="imgStuffTeam"  src="../profile_pictures/nikosv.jpg" alt="Nikos Vasilakis"> <strong><a href="https://nikos.vasilak.is/"   target="_blank">
     Nikos Vasilakis</a></strong> <br>
 Building transition paths toward secure multi-scale distributed enviroments.</p>
 <p><a href="mailto:nikos@vasilak.is"  >
@@ -632,7 +632,7 @@ Building transition paths toward secure multi-scale distributed enviroments.</p>
 <div class="gdoc-columns gdoc-columns--regular flex flex-gap flex-mobile-column">
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
        <!-- begin columns block -->
-<p><img class="imgStuffTeam" align="left" src="../profile_pictures/dawn.jpg" alt="Dawn T. Reed"> <strong><a href="https://cs.brown.edu/people/dtreed/"   target="_blank">
+<p><img class="imgStuffTeam"  src="../profile_pictures/dawn.jpg" alt="Dawn T. Reed"> <strong><a href="https://cs.brown.edu/people/dtreed/"   target="_blank">
     Dawn T. Reed</a></strong><br>
 Making all the science possible.<br/><br/></p>
 <p><a href="mailto:dtreed@cs.brown.edu"  >
@@ -653,7 +653,7 @@ Making all the science possible.<br/><br/></p>
 <div class="gdoc-columns gdoc-columns--regular flex flex-gap flex-mobile-column">
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
        <!-- begin columns block -->
-<p><img class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/di.jpg" alt=""> <p> <strong><a href="https://sleepymug.me"   target="_blank">
+<p><img class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/di.jpg" alt=""> <p> <strong><a href="https://sleepymug.me"   target="_blank">
     Di Jin</a></strong><br>
 Making software security approachable and scalable.</p>
 <p><a href="mailto:di_jin@brown.edu"  >
@@ -661,7 +661,7 @@ Making software security approachable and scalable.</p>
     Github</a></p></p>
 </div>
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
-      <p><img class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/lukas.jpg" alt="Lukas Lazarek"> <p> <strong><a href="https://llazarek.github.io"   target="_blank">
+      <p><img class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/lukas.jpg" alt="Lukas Lazarek"> <p> <strong><a href="https://llazarek.github.io"   target="_blank">
     Lukas Lazarek</a></strong><br>
 Exploring which language-systems features are practically useful.</p>
 <p><a href="mailto:lukas_lazarek@brown.edu"  >
@@ -683,26 +683,26 @@ Exploring which language-systems features are practically useful.</p>
 <div class="gdoc-columns gdoc-columns--regular flex flex-gap flex-mobile-column">
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
        <!-- begin columns block -->
-<p><img class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/eric.jpg" alt="Eric Zhao"> <p><strong><a href="https://mustardfox.org/"   target="_blank">
+<p><img class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/eric.jpg" alt="Eric Zhao"> <p><strong><a href="https://mustardfox.org/"   target="_blank">
     Eric Zhao</a></strong><br>
 Interested in principled and provably correct abstractions. Co-advised by <a href="https://robertylewis.com"   target="_blank">
     R. Lewis</a>.</p>
 <p><a href="mailto:eric_c_zhao@brown.edu"  >
     E-mail</a> | <a href="http://github.com/mirryi"   target="_blank">
     Github</a></p></p>
-<p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/vagos.jpg" alt="Evangelos Lamprou" /> <p> <strong><a href="https://vagos.lamprou.xyz/"   target="_blank">
+<p><img  class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/vagos.jpg" alt="Evangelos Lamprou" /> <p> <strong><a href="https://vagos.lamprou.xyz/"   target="_blank">
     Evangelos Lamprou</a></strong><br>
 Interested in distributed systems, LLMs, and beyond.   </p>
 <p><a href="mailto:vagos@lamprou.xyz"  >
     E-mail</a> | <a href="http://github.com/vagos"   target="_blank">
     Github</a></p></p>
-<p><img class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/oguzhan.jpg" alt="Oğuzhan Çölkesen"> <p><strong><a href="https://www.oguzhancolkesen.com"   target="_blank">
+<p><img class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/oguzhan.jpg" alt="Oğuzhan Çölkesen"> <p><strong><a href="https://www.oguzhancolkesen.com"   target="_blank">
     Oğuzhan Çölkesen</a></strong><br>
 Interested in parallel and distributed systems, as well as their optimization.   </p>
 <p><a href="mailto:oguzhan@brown.edu"  >
     E-mail</a> | <a href="http://github.com/ocolkesen"   target="_blank">
     Github</a></p></p>
-<p><img class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/yizheng.jpg" alt="Yizheng Xie"> <p> <strong><a href="https://yizhengx.github.io/"   target="_blank">
+<p><img class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/yizheng.jpg" alt="Yizheng Xie"> <p> <strong><a href="https://yizhengx.github.io/"   target="_blank">
     Yizheng Xie</a></strong><br>
 Enjoys working at the intersection of systems, software, and automation.</p>
 <p><a href="mailto:yizhengx@brown.edu"  >
@@ -710,13 +710,13 @@ Enjoys working at the intersection of systems, software, and automation.</p>
     Github</a></p></p>
 </div>
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
-      <p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/ethan.jpg" alt="Ethan Lavi" /> <p> <strong><a href="https://ethanlavi.github.io/"   target="_blank">
+      <p><img  class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/ethan.jpg" alt="Ethan Lavi" /> <p> <strong><a href="https://ethanlavi.github.io/"   target="_blank">
     Ethan Lavi</a></strong><br>
 Designing correct and scalable distributed systems.   </p>
 <p><a href="mailto:ethan_lavi@brown.edu"  >
     E-mail</a> | <a href="http://github.com/EthanLavi"   target="_blank">
     Github</a></p></p>
-<p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/grigoris.jpg" alt="Grigoris Ntousakis" /> <p> <strong><a href="https://www.ntousakis.com/"   target="_blank">
+<p><img  class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/grigoris.jpg" alt="Grigoris Ntousakis" /> <p> <strong><a href="https://www.ntousakis.com/"   target="_blank">
     Grigoris Ntousakis</a></strong><br>
 Reimagining third-party library and package ecosystems. Co-advised by <a href="https://cs.brown.edu/~vpk/"   target="_blank">
     V. Kemerlis</a>.</p>
@@ -724,7 +724,7 @@ Reimagining third-party library and package ecosystems. Co-advised by <a href="h
     E-mail</a> | <a href="http://github.com/GNtousakis"   target="_blank">
     Github</a> | <a href="https://twitter.com/gntousakis"   target="_blank">
     Twitter</a></p></p>
-<p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/yuchen.jpg" alt="Yuchen Lu" /> <p> <strong><a href="https://lwwlwwl.github.io/"   target="_blank">
+<p><img  class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/yuchen.jpg" alt="Yuchen Lu" /> <p> <strong><a href="https://lwwlwwl.github.io/"   target="_blank">
     Yuchen Lu</a></strong><br>
 Leveraging ML to build high-performance systems.   </p>
 <p><a href="mailto:yuchen_lu@brown.edu"  >
@@ -746,7 +746,7 @@ Leveraging ML to build high-performance systems.   </p>
 <div class="gdoc-columns gdoc-columns--regular flex flex-gap flex-mobile-column">
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
        <!-- begin columns block -->
-<p><img class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/zekai.jpg" alt="Zekai Li"><p><strong>Zekai Li</strong><br>
+<p><img class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/zekai.jpg" alt="Zekai Li"><p><strong>Zekai Li</strong><br>
 Exploring formal methods and how AI enhances them.</p>
 <p><a href="mailto:zekai_li@brown.edu"  >
     E-mail</a> | <a href="http://github.com/spanning-tree"   target="_blank">
@@ -767,7 +767,7 @@ Exploring formal methods and how AI enhances them.</p>
 <div class="gdoc-columns gdoc-columns--regular flex flex-gap flex-mobile-column">
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
        <!-- begin columns block -->
-<p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/megan.jpg" alt="Megan Zheng" /> <p> <strong><a href="https://yuuu23.github.io/"   target="_blank">
+<p><img  class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/megan.jpg" alt="Megan Zheng" /> <p> <strong><a href="https://yuuu23.github.io/"   target="_blank">
     Megan Zheng</a></strong><br>
 Synthesizing correct and high-performance runtime primitives.</p>
 <p><a href="mailto:megan_zheng@brown.edu"  >
@@ -776,13 +776,13 @@ Synthesizing correct and high-performance runtime primitives.</p>
 </div>
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
       <!--- ## Eliminating Julian 
-<img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/julian.jpg" alt="Julian Dai" /> <p> __[Julian Dai](https://jdai1.github.io/)__\
+<img  class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/julian.jpg" alt="Julian Dai" /> <p> __[Julian Dai](https://jdai1.github.io/)__\
 Solving the scalability challenges of secure regeneration for real-world ecosystems.
 
 [E-mail](mailto:julian_dai@brown.edu) | [Github](http://github.com/jdai1)</p>
 
 -->
-<p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/atharv.jpg" alt="Atharv Chowdhary" /> <p> <strong><a href="https://achowd32.github.io/"   target="_blank">
+<p><img  class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/atharv.jpg" alt="Atharv Chowdhary" /> <p> <strong><a href="https://achowd32.github.io/"   target="_blank">
     Atharv Chowdhary</a></strong><br>
 Bridging the gap between machine learning and computer systems.</p>
 <p><a href="mailto:atharv_chowdhary@brown.edu"  >
@@ -805,23 +805,24 @@ Bridging the gap between machine learning and computer systems.</p>
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
        <!-- begin columns block -->
 <!-- 
-<img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/ioanna.jpg" alt="Ioanna Gemou" /> <p>__[Ioanna Gemou](https://igemou.github.io/)__\
+<img  class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/ioanna.jpg" alt="Ioanna Gemou" /> <p>__[Ioanna Gemou](https://igemou.github.io/)__\
 At DTU; Operating at the intersection of ML and systems. Co-advised by [R. Singh](https://ritambharasingh.com).
 
 [E-mail](mailto:ioannagemou@gmail.com) | [Github](http://github.com/igemou)</p> -->
 <!-- 
-<img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/vagos.jpg" alt="Vagos Lamprou" /> <p>__[Vagos Lamprou](https://vagos.github.io/)__\
+<img  class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/vagos.jpg" alt="Vagos Lamprou" /> <p>__[Vagos Lamprou](https://vagos.github.io/)__\
 At DTU; Intersted in distributed systems,  LLMs, and beyond.
 
 [E-mail](mailto:vagoslabrou@gmail.com) | [Github](http://github.com/vagos)</p> -->
-<p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/george.jpg" alt="George Kapetanakis" /> <p><strong>George Kapetanakis</strong><br>
+<p><img  class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/george.jpg" alt="George Kapetanakis" /> <p><strong>George Kapetanakis</strong><br>
 Writing good code to make writing good code easier.</p>
 <p><a href="mailto:george@kapetanak.is"  >
     E-mail</a> | <a href="http://github.com/gkapetanakis"   target="_blank">
     Github</a></p></p>
 </div>
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
-      <p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/maria.jpg" alt="Maria Lazou" /> <p><strong>Maria Lazou</strong><br>
+      <p><img  class="imgStuffTeam" width="150" height="150"  src="../profile_pictures/maria.jpg" alt="Maria Lazou" /> <p><strong><a href="https://mlazoy.github.io/"   target="_blank">
+    Maria Lazou</a></strong><br>
 Exploring the intersection of operating systems with secure computation and low-level optimizations.</p>
 <p><a href="mailto:maria_lazou1@brown.edu"  >
     E-mail</a> | <a href="http://github.com/mlazoy"   target="_blank">
