remove bib parser
Signed-off-by: Evangelos Lamprou <vagos@lamprou.xyz>

--- a/public/404.html
+++ b/public/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr" class="scroll-smooth" data-default-appearance="white"
-  data-auto-appearance="false"><head>
+  data-auto-appearance="false"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8" />
   
   <meta http-equiv="content-language" content="en" />
@@ -15,7 +15,7 @@
   
   
   
-  <link rel="canonical" href="https://atlas.cs.brown.edu/404.html" />
+  <link rel="canonical" href="http://localhost:1313/404.html" />
   
   
   
@@ -50,14 +50,17 @@
   
   
   
-  <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="Welcome Atlas Group." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://atlas.cs.brown.edu/404.html" />
+  <meta property="og:url" content="http://localhost:1313/404.html">
+  <meta property="og:site_name" content="ATLAS Group">
+  <meta property="og:title" content="404 Page not found">
+  <meta property="og:description" content="Welcome Atlas Group.">
+  <meta property="og:locale" content="en">
+  <meta property="og:type" content="website">
 
-  <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Welcome Atlas Group."/>
+  
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="404 Page not found">
+  <meta name="twitter:description" content="Welcome Atlas Group.">
 
   
   
@@ -518,7 +521,7 @@
   </script>
   
   
-  <script type="text/javascript" src="/js/process.min.35c1113bcc16c5a59bf031082f9e63822aa95280423881a7847a7ff33a16e6299ce6a840d9ef4e10d947e030a18f3f20359afb2ec0f35967484b9a9360ac3145.js" integrity="sha512-NcERO8wWxaWb8DEIL55jgiqpUoBCOIGnhHp/8zoW5imc5qhA2e9OENlH4DChjz8gNZr7LsDzWWdIS5qTYKwxRQ=="></script>
+  <script type="text/javascript" src="/js/process.min.330c9c7ed3478d29ddc83242e05f3636088799f250f724e0eee3b88057e4e288861cf148972d2ac1ed5972c27193c1c919d768bf5e52f6ef01d3abc3b16df7c2.js" integrity="sha512-MwycftNHjSndyDJC4F82NgiHmfJQ9yTg7uO4gFfk4oiGHPFIly0qwe1ZcsJxk8HJGddov15S9u8B06vDsW33wg=="></script>
   
   
 </footer>
