--- a/public/acceleration/index.html
+++ b/public/acceleration/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr" class="scroll-smooth" data-default-appearance="white"
-  data-auto-appearance="false"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  data-auto-appearance="false"><head>
   <meta charset="utf-8" />
   
   <meta http-equiv="content-language" content="en" />
@@ -15,7 +15,7 @@
   
   
   
-  <link rel="canonical" href="http://localhost:1313/acceleration/" />
+  <link rel="canonical" href="https://atlas.cs.brown.edu/acceleration/" />
   
   
   
@@ -50,7 +50,7 @@
   
   
   
-  <meta property="og:url" content="http://localhost:1313/acceleration/">
+  <meta property="og:url" content="https://atlas.cs.brown.edu/acceleration/">
   <meta property="og:site_name" content="ATLAS Group">
   <meta property="og:title" content="ATLAS Group">
   <meta property="og:description" content="Language-agnostic programming environments hinder automated parallelization and distribution, often forcing developers that deal with large datasets to manually rewrite programs and their components in languages that support these features. We have built a series of systems that accelerate, parallelize, distribute, and scale out computations fully automatically — while maintaining key correctness and security guarantees. Our systems target widely used environments — e.g., JavaScript, Python, the Shell — and are offered by open-source consortia such as the Linux Foundation. Examples: NSDI&#39;23, OSDI&#39;22, EuroSys&#39;21.">
@@ -75,7 +75,7 @@
     "description": "Language-agnostic programming environments hinder automated parallelization and distribution, often forcing developers that deal with large datasets to manually rewrite programs and their components in languages that support these features. We have built a series of systems that accelerate, parallelize, distribute, and scale out computations fully automatically — while maintaining key correctness and security guarantees. Our systems target widely used environments — e.g., JavaScript, Python, the Shell — and are offered by open-source consortia such as the Linux Foundation. Examples: NSDI\u002723, OSDI\u002722, EuroSys\u002721.",
     
     "inLanguage": "en",
-    "url" : "http:\/\/localhost:1313\/acceleration\/",
+    "url" : "https:\/\/atlas.cs.brown.edu\/acceleration\/",
     "author" : {
       "@type": "Person",
       "name": ""
