--- a/public/ssc/index.html
+++ b/public/ssc/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr" class="scroll-smooth" data-default-appearance="white"
-  data-auto-appearance="false"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  data-auto-appearance="false"><head>
   <meta charset="utf-8" />
   
   <meta http-equiv="content-language" content="en" />
@@ -15,7 +15,7 @@
   
   
   
-  <link rel="canonical" href="http://localhost:1313/ssc/" />
+  <link rel="canonical" href="https://atlas.cs.brown.edu/ssc/" />
   
   
   
@@ -50,7 +50,7 @@
   
   
   
-  <meta property="og:url" content="http://localhost:1313/ssc/">
+  <meta property="og:url" content="https://atlas.cs.brown.edu/ssc/">
   <meta property="og:site_name" content="ATLAS Group">
   <meta property="og:title" content="ATLAS Group">
   <meta property="og:description" content="Recent trends are pushing developers towards new paradigms of secure and scalable computing—e.g., confidential computing, microservices, serverless computing, and edge computing. Transforming a conventional program to leverage these paradigms is a laborious manual process that can lead to suboptimal performance and in many cases even break the program. We are developing systems that support this kind of decomposition and leveraging special hardware capabilities when these are available in the network. Examples: ARES&#39;22, PLDI&#39;19, ATC&#39;19.">
@@ -75,7 +75,7 @@
     "description": "Recent trends are pushing developers towards new paradigms of secure and scalable computing—e.g., confidential computing, microservices, serverless computing, and edge computing. Transforming a conventional program to leverage these paradigms is a laborious manual process that can lead to suboptimal performance and in many cases even break the program. We are developing systems that support this kind of decomposition and leveraging special hardware capabilities when these are available in the network. Examples: ARES\u002722, PLDI\u002719, ATC\u002719.",
     
     "inLanguage": "en",
-    "url" : "http:\/\/localhost:1313\/ssc\/",
+    "url" : "https:\/\/atlas.cs.brown.edu\/ssc\/",
     "author" : {
       "@type": "Person",
       "name": ""
