--- a/public/supply-chain/index.html
+++ b/public/supply-chain/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr" class="scroll-smooth" data-default-appearance="white"
-  data-auto-appearance="false"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  data-auto-appearance="false"><head>
   <meta charset="utf-8" />
   
   <meta http-equiv="content-language" content="en" />
@@ -15,7 +15,7 @@
   
   
   
-  <link rel="canonical" href="http://localhost:1313/supply-chain/" />
+  <link rel="canonical" href="https://atlas.cs.brown.edu/supply-chain/" />
   
   
   
@@ -50,7 +50,7 @@
   
   
   
-  <meta property="og:url" content="http://localhost:1313/supply-chain/">
+  <meta property="og:url" content="https://atlas.cs.brown.edu/supply-chain/">
   <meta property="og:site_name" content="ATLAS Group">
   <meta property="og:title" content="ATLAS Group">
   <meta property="og:description" content="Modern software incorporates thousands of dependencies as a means of accelerating development and reducing cost—at a significant risk to safety and security for both developers and end-users. We have built a series of systems targeting the JavaScript ecosystem—the largest such ecosystem out there—automating the analysis, transformation, and synthesis of JavaScript dependencies across a variety of threat models. Examples: AsiaCCS&#39;23, CCS&#39;21, CCS&#39;21.">
@@ -75,7 +75,7 @@
     "description": "Modern software incorporates thousands of dependencies as a means of accelerating development and reducing cost—at a significant risk to safety and security for both developers and end-users. We have built a series of systems targeting the JavaScript ecosystem—the largest such ecosystem out there—automating the analysis, transformation, and synthesis of JavaScript dependencies across a variety of threat models. Examples: AsiaCCS\u002723, CCS\u002721, CCS\u002721.",
     
     "inLanguage": "en",
-    "url" : "http:\/\/localhost:1313\/supply-chain\/",
+    "url" : "https:\/\/atlas.cs.brown.edu\/supply-chain\/",
     "author" : {
       "@type": "Person",
       "name": ""
