--- a/public/index.html
+++ b/public/index.html
@@ -519,59 +519,28 @@
             style="text-decoration-line: none !important;" href="#news" aria-label="Anchor">#</a></span>        
     
 </h2>
-<p>Sep'25: Early ideas on <a href="https://nikos.vasilak.is/p/exo:pacmi:2025.pdf"   target="_blank">
+<div>Sep'25: Early ideas on <a href="https://nikos.vasilak.is/p/exo:pacmi:2025.pdf"   target="_blank">
     LLM guardrails</a>, <a href="https://nikos.vasilak.is/p/cocoon:plos:2025.pdf"   target="_blank">
     hybrid scheduling</a>, and <a href="https://nikos.vasilak.is/p/klean:plos:2025.pdf"   target="_blank">
     verifiable kernel extensions</a> at <a href="https://sigops.org/s/conferences/sosp/2025/workshops.html"   target="_blank">
-    SOSP'25 workshops</a>! <br>
-Aug'25: Two <a href="https://www.usenix.org/conference/nsdi26"   target="_blank">
+    SOSP'25 workshops</a>!</div><div>Aug'25: Two <a href="https://www.usenix.org/conference/nsdi26"   target="_blank">
     NSDI'26</a> papers on <a href="https://github.com/atlas-brown/slowpoke"   target="_blank">
     optimization prediction</a> and <a href="https://github.com/binpash/fractal"   target="_blank">
-    fault tolerance</a> for opaque distributed systems!<br>
-Aug'25: <a href="https://vagos.lamprou.xyz"   target="_blank">
-    Evangelos Lamprou</a> joins BrownCS and the group for his PhD!  <br>
-Jul'25: Our <a href="https://nikos.vasilak.is/p/koala:atc:2025.pdf"   target="_blank">
+    fault tolerance</a> for opaque distributed systems!</div><div>Jul'25: Our <a href="https://nikos.vasilak.is/p/koala:atc:2025.pdf"   target="_blank">
     benchmark suite for the shell</a> received the <a href="https://www.usenix.org/conferences/best-papers"   target="_blank">
     Best Paper Award</a> at <a href="https://www.usenix.org/conference/atc25"   target="_blank">
-    USENIX ATC'25</a>!<br>
-Jul'25: <a href="https://nikos.vasilak.is"   target="_blank">
-    Nikos Vasilakis</a> received a <a href="https://blog.google/products/google-cloud/ml-systems-junior-faculty-awards/"   target="_blank">
-    Google ML-and-Systems Junior Faculty Award</a>!<br>
-Jun'25: <a href="https://nikos.vasilak.is/p/koala:atc:2025.pdf"   target="_blank">
-    Our paper</a> on the <a href="https://kben.sh/"   target="_blank">
-    Koala benchmarks for the shell</a> was accepted at Usenix <a href="https://www.usenix.org/conference/atc25/presentation/lamprou"   target="_blank">
-    ATC'25</a>&mdash;the <a href="https://www.usenix.org/blog/usenix-atc-announcement"   target="_blank">
-    last one</a>, <em>ever</em>!<br>
-Apr'25: <a href="https://forms.gle/zL2giouQjeKyfcGR6"   target="_blank">
+    USENIX ATC'25</a>!</div><div>Jul'25: Our group received a <a href="https://blog.google/products/google-cloud/ml-systems-junior-faculty-awards/"   target="_blank">
+    Google ML-and-Systems Junior Faculty</a> Award on <a href="https://atlas.cs.brown.edu/supply-chain/"   target="_blank">
+    Securing Open-Source Software</a>!</div><div>Jul'25: <a href="https://vagos.lamprou.xyz/"   target="_blank">
+    Evangelos Lamprou</a> joins the group for his PhD!</div><div>Jun'25: Our paper on the <a href="https://kben.sh/"   target="_blank">
+    Koala benchmark for the shells</a> was accepted at Usenix <a href="https://www.usenix.org/conference/atc25/presentation/lamprou"   target="_blank">
+    ATC'25</a>&mdash;the last one, ever!</div><div>May'25: <a href="https://www.ntousakis.com/"   target="_blank">
+    Grigoris Ntousakis</a> started his internship at IBM research!</div><div>Apr'25: <a href="https://forms.gle/zL2giouQjeKyfcGR6"   target="_blank">
     Apply</a> to attend the <a href="https://brown-systems-week.github.io/"   target="_blank">
-    Brown Systems Week 2025</a>!<br>
-Mar'25: Our paper on <a href="https://nikos.vasilak.is/p/sash:hotos:2025.pdf"   target="_blank">
+    Brown Systems Week 2025</a>!</div><div>Mar'25: Our paper on <a href="https://nikos.vasilak.is/p/sash:hotos:2025.pdf"   target="_blank">
     semantics-driven static analysis for the shell</a> made it to <a href="https://sigops.org/s/conferences/hotos/2025/"   target="_blank">
-    HotOS'25</a>!<br>
-Mar'25: Received an <a href="https://www.amazon.science/research-awards/program-updates/70-amazon-research-award-recipients-announced"   target="_blank">
-    Amazon Research Award (ARA)</a> on Automated Reasoning for the Unix/Linux shell!<br>
-Jan'25: <a href="https://nikos.vasilak.is"   target="_blank">
-    Nikos Vasilakis</a> is organizing <a href="https://eurosec-workshop.github.io/"   target="_blank">
-    EuroSec'25</a>, co-located with <a href="https://2025.eurosys.org/"   target="_blank">
-    EuroSys'25</a> and <a href="https://www.asplos-conference.org/asplos2025/"   target="_blank">
-    ASPLOS'25</a>.<br>
-Dec'24: <a href="https://mustardfox.org/"   target="_blank">
-    Eric Zhao</a> discusses the intricacies of symbolic execution for the shell at <a href="https://njpls.org/"   target="_blank">
-    NJPLS'24</a>.<br>
-Oct'24: <a href="https://anarsipur.com/"   target="_blank">
-    Anirudh Narsipur</a> discusses static analysis for the Unix shell at <a href="https://nepls.org/Events/34/"   target="_blank">
-    NEPLS'24</a>.<br>
-Aug'24: <a href="https://llazarek.github.io/"   target="_blank">
-    Lukas Lazarek</a> and <a href="https://sleepymug.me/"   target="_blank">
-    Di Jin</a> join the group as postdoctoral associates—welcome!<br>
-Jul'24: <a href="https://mustardfox.org/"   target="_blank">
-    Eric Zhao</a>, <a href="https://ethanlavi.github.io/"   target="_blank">
-    Ethan Lavi</a>, <a href="https://www.ntousakis.com/"   target="_blank">
-    Grigoris Ntousakis</a>, and <a href="https://www.linkedin.com/in/luyc/"   target="_blank">
-    Yuchen Lu</a> join the group for their PhDs!<br>
-Jun'24: <a href="https://igemou.github.io/"   target="_blank">
-    Ioanna Gemou</a> starts her research visit on machine learning for systems, co-hosted by <a href="https://ritambharasingh.com/"   target="_blank">
-    Ritambhara Singh</a>.</p>
+    HotOS'25</a>!</div><div>Mar'25: Received an <a href="https://www.amazon.science/research-awards/program-updates/70-amazon-research-award-recipients-announced"   target="_blank">
+    Amazon Research Award (ARA)</a> on Automated Reasoning for the Unix/Linux shell!</div>
 <p>See <a href="https://atlas.cs.brown.edu/news/"  >
     all news</a></p>
 <hr>
@@ -585,7 +554,7 @@ Jun'24: <a href="https://igemou.github.io/"   target="_blank">
 </h2>
 
 
-<div id="gallery-1-1770772613863480000">
+<div id="gallery-2-1770775134354478000">
   
 <!-- <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/anirudh.jpg" alt="Anirudh Narsipur" />
@@ -691,7 +660,7 @@ Jun'24: <a href="https://igemou.github.io/"   target="_blank">
 
 <script>
   $(window).on("load", function () {
-    $('#gallery-1-1770772613863480000').packery({
+    $('#gallery-2-1770775134354478000').packery({
       percentPosition: true,
       gutter: 5,
       resize: true
